compiler/tests/snapshots/cli_check__check_valid_function_calls.snap
---
source: tests/cli_check.rs
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
No errors found in <MANIFEST_DIR>/tests/programs/function_calls.mj
--- stderr ---
