compiler/tests/snapshots/cli_check__check_valid_match_in_function.snap
---
source: tests/cli_check.rs
assertion_line: 577
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
No errors found in <MANIFEST_DIR>/tests/programs/match_in_function.mj
--- stderr ---
