compiler/tests/snapshots/cli_check__check_valid_struct_basic.snap
---
source: tests/cli_check.rs
assertion_line: 535
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
No errors found in <MANIFEST_DIR>/tests/programs/struct_basic.mj
--- stderr ---
