compiler/tests/snapshots/cli_check__check_valid_struct_in_function.snap
---
source: tests/cli_check.rs
assertion_line: 542
expression: snapshot_view(&result)
---
status: 0
--- stdout ---
No errors found in <MANIFEST_DIR>/tests/programs/struct_in_function.mj
--- stderr ---
